[project]
name = "pocol"
version = "1.0.0"
description = "Intel N100搭載ミニPCで動作する、省電力・自律型AI Discord Bot (Qwen 2.5 + Moondream)"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Ryosuke Murase" }
]
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "discord-py>=2.6.4",
    "duckduckgo-search>=8.1.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ★ここから下を追加しました★
[tool.hatch.build.targets.wheel]
packages = ["."]